tests/reference/asr-flush_invalid_kwarg1-9fc0c7b.stderr
semantic error: Invalid argument `start` supplied
 --> tests/errors/flush_invalid_kwarg1.f90:3:5
  |
3 |     FLUSH(unit=10, start=100)
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^
